fix(bazzite-deck-touch): remove dependencies before plasma-workspace

--- a/recipes/cleanup/bazzite-desktop-ui.yml
+++ b/recipes/cleanup/bazzite-desktop-ui.yml
@@ -1,4 +1,9 @@
 modules:
   - type: rpm-ostree
     remove:
+      - plasma-desktop
+      - plasma-lookandfeel-fedora
+      - plasma-print-manager-libs
+      - plasma-print-manager
+      - sddm-breeze
       - plasma-workspace
